--- a/apps/transfer/templates/transfer/schedule_export_update.html
+++ b/apps/transfer/templates/transfer/schedule_export_update.html
@@ -84,7 +84,7 @@
 
     function initTables(schedule_id) {
         $.ajax({
-            url: "{% url 'api-transfer:command-list' %}" + '?schedule=' + schedule_id,
+            url: "{% url 'api-transfer:command-list' %}" + '?schedule=' + schedule_id + '&status=2',
             method: 'GET',
             data: {},
             dataType: "json",
