Database增加user_owner user_share字段，对应修改页面

--- a/apps/transfer/templates/transfer/database_create.html
+++ b/apps/transfer/templates/transfer/database_create.html
@@ -20,6 +20,8 @@
     {% bootstrap_field form.dev layout="horizontal" %}
     {% bootstrap_field form.opr layout="horizontal" %}
     {% bootstrap_field form.bus layout="horizontal" %}
+    {% bootstrap_field form.user_owner layout="horizontal" %}
+    {% bootstrap_field form.user_share layout="horizontal" %}
 
     <div class="hr-line-dashed"></div>
     <h3>{% trans 'Other' %}</h3>
