--- a/apps/transfer/templates/transfer/schedule_import_create.html
+++ b/apps/transfer/templates/transfer/schedule_import_create.html
@@ -18,7 +18,7 @@
 {#    {% bootstrap_field form.name layout="horizontal" %}#}
     {% bootstrap_field form.database layout="horizontal" %}
     {% bootstrap_field form.tables layout="horizontal" %}
-    {% bootstrap_field form.crontab layout="horizontal" %}
+    {% bootstrap_field form.run_time layout="horizontal" %}
     {% bootstrap_field form.comment layout="horizontal" %}
     <div class="hr-line-dashed"></div>
     <div class="form-group">
@@ -71,11 +71,11 @@
         }
     }
 
-    $('#id_crontab').datetimepicker({
+    $('#id_run_time').datetimepicker({
         autoclose: true,
         todayBtn: true,
         startDate: getNowFormatDate()
-    });
+     });
 
     $('select:first').change(function(){
         var database_id=$(this).children('option:selected').val();
