--- a/apps/transfer/templates/transfer/database_create.html
+++ b/apps/transfer/templates/transfer/database_create.html
@@ -15,8 +15,7 @@
     {% csrf_token %}
     <h3>{% trans 'Basic' %}</h3>
     {% bootstrap_field form.name layout="horizontal" %}
-    {% bootstrap_field form.quota layout="horizontal" %}
-    {% bootstrap_field form.label layout="horizontal" %}
+    {% bootstrap_field form.asset layout="horizontal" %}
     {% bootstrap_field form.dev layout="horizontal" %}
     {% bootstrap_field form.opr layout="horizontal" %}
     {% bootstrap_field form.bus layout="horizontal" %}
