导入导出功能开发库表分开导入

--- a/apps/transfer/templates/transfer/table_list.html
+++ b/apps/transfer/templates/transfer/table_list.html
@@ -1,6 +1,16 @@
 {% extends '_base_list.html' %}
 {% load i18n static %}
 {% block table_search %}
+    <div class="html5buttons">
+        <div class="dt-buttons btn-group">
+            <a class="btn btn-default btn_import" data-toggle="modal" data-target="#table_import_modal" tabindex="0">
+                <span>{% trans "Import" %}</span>
+            </a>
+            <a class="btn btn-default btn_export" tabindex="0">
+                <span>{% trans "Export" %}</span>
+            </a>
+        </div>
+    </div>
 {% endblock %}
 {% block table_container %}
 {% if user.is_superuser %}
@@ -48,7 +58,7 @@
         </div>
     </div>
 </div>
-{#{% include "transfer/_table_import_modal.html" %}#}
+{% include "transfer/_table_import_modal.html" %}
 {% endblock %}
 {% block content_bottom_left %}{% endblock %}
 {% block custom_foot_js %}
@@ -74,11 +84,7 @@ function initTable() {
                 $(td).html(cellData)
             }},
             {targets: 5, createdCell: function (td, cellData, rowData) {
-                if (!cellData) {
-                    $(td).html('否')
-                } else {
-                    $(td).html('是')
-                }
+                $(td).html(cellData)
             }},
             {targets: 6, createdCell: function (td, cellData, rowData) {
                 $(td).html(cellData)
@@ -142,6 +148,49 @@ $(document).ready(function(){
     $.each(fields, function (index, value) {
         console.log(value)
     });
+
+    $('.btn_export').click(function () {
+        var tables = [];
+        var rows = table.rows('.selected').data();
+        if(rows.length===0){
+            rows = table.rows().data();
+        }
+        $.each(rows, function (index, obj) {
+            tables.push(obj.id)
+        });
+        $.ajax({
+            url: "{% url 'transfer:table-export' %}",
+            method: 'POST',
+            data: JSON.stringify({tables_id: tables}),
+            dataType: "json",
+            success: function (data, textStatus) {
+                window.open(data.redirect)
+            },
+            error: function () {
+                toastr.error('Export failed');
+            }
+        })
+    });
+
+    $('#btn_table_import').click(function() {
+        var $form = $('#fm_table_import');
+        $form.find('.help-block').remove();
+        function success (data) {
+            if (data.valid === false) {
+                $('<span />', {class: 'help-block text-danger'}).html(data.msg).insertAfter($('#id_tables'));
+            } else {
+                $('#id_created').html(data.created_info);
+                $('#id_created_detail').html(data.created.replace(/\n/g, '<br>'));
+                {#$('#id_updated').html(data.updated_info);#}
+                {#$('#id_updated_detail').html(data.updated.join(', '));#}
+                {#$('#id_failed').html(data.failed_info);#}
+                {#$('#id_failed_detail').html(data.failed.join(', '));#}
+                var $data_table = $('#table_list_table').DataTable();
+                $data_table.ajax.reload();
+            }
+        }
+        $form.ajaxSubmit({success: success});
+    })
 
 }).on('click', '#btn_bulk_update', function(){
     var action = $('#slct_bulk_update').val();
